--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -11,7 +11,7 @@
 // If navbar is static on top
 @media (min-width: @navbarCollapseWidth) { body { padding-top: 60px; } }
 
-// Course Template Styles 
+// Course Template Styles
 h1.site-title a:visited { color: @linkColor; }
 #main { min-height: 600px;
 	.intro-banner {
@@ -172,6 +172,7 @@ h1.site-title a:visited { color: @linkColor; }
 }
 
 @media (min-width: 1200px) {
+	#content { padding: 0 50px 0 0; }
 	body.modules-lessons {
 		&.single-layout {
 			ol.modules li.module {
