Add pager styles

--- a/inc/less/dcdcBootstrap.less
+++ b/inc/less/dcdcBootstrap.less
@@ -42,6 +42,7 @@
 @import "../bootstrap/less/navs.less";
 @import "../bootstrap/less/navbar.less";
 @import "../bootstrap/less/breadcrumbs.less";
+@import "pager.less";
 
 // Add-ons
 //@import "../add-ons/less/tables.less"; // Example: If you wanted to use the bootstrap tables style;
