--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -11,30 +11,68 @@
 // If navbar is static on top
 @media (min-width: @navbarCollapseWidth) { body { padding-top: 60px; } }
 
+// Design Team Style API
+
+// Test Beige: #FFE5C0;
+// Test DarkGreen:;
+// Test LightGreen:;
+
+
+@DCDCprimaryColor:"";
+@DCDCsecondaryColor:"";
+@DCDCtertiaryColor:"";
+@DCDCbannerColor:""; // Optional
+
+
 // Course Template Styles
-h1.site-title a:visited { color: @linkColor; }
+h1.site-title a:visited { color: @grayLighter; }
+.crumbSpacer { margin: 0 10px; color: @gray; }
+
+header#navbar { 
+	#mixin > .shadow(0 0 8px 1px, #AAA, false);
+	.btn-primary { padding: 2px 14px; margin-top: 7px; } // "Add a Menu!" button
+	.navbar-inner {
+		border: none;
+		.site-affiliation {
+			.site-logo { background: url('../images/uh-logo.png') no-repeat; width: 45px; height: 40px; }
+			width: 45px;
+			height: 40px;
+			float: left;
+			margin: 0 15px 0 0;
+			&[data-affil=default] { background-color: @grayDark; }
+			&[data-affil=system] { #mixin > .gradient(#C7B07B, #B3995D, '../images/gradient-bg-system.png'); a, h2 { color: @white; } }
+			&[data-affil=manoa] { #mixin > .gradient(#2F663F, #0F4D2F, '../images/gradient-bg-manoa.png'); a, h2 { color: @white; } }
+			&[data-affil=hcc] { #mixin > .gradient(#3D8893, #016A7A, '../images/gradient-bg-hcc.png'); a, h2 { color: @white; }  }
+			&[data-affil=kcc] { /* Nothing for now */ }
+		}
+	
+		nav {
+			.nav { margin: 0; }
+			ul.dropdown-menu a { color: @grayDark; &:hover { color: @white; } }
+			a.empty-top-nav { color: @white; }
+			.caret { border-top: 4px solid @white; margin: 0 0 0 9px; vertical-align: middle; }
+		} // nav
+	}
+} // header
 #main { min-height: 600px;
 	.intro-banner {
-		padding: 25px;
+		padding: 20px;
 		background-color: #1B1B1B; color: #FFF;
 		position: relative;
 		.college-branding {
 			min-height: 39px;
 			margin-bottom: 20px;
-			padding-bottom: 20px;
+			padding-bottom: 24px;
 			border-bottom: 1px solid #FFF;
 			background: url('../images/college-logos.png') no-repeat;
-			&.system { background-position: 0 -521px; }
-			//&.system.light { background-position: 0 5px; border-bottom-color: #000; }
-			&.manoa { background-position: 0 -423px; }
-			//&.manoa.light { background-position: 0 5px; border-bottom-color: #000; }
-			&.hcc { background-position: 0 -620px; height: 78px }
-			//&.hcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
-			&.kcc { background-position: 0 -755px; height: 78px }
-			//&.kcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
+			&[data-affil=default] { background-position: 0 -588px; }
+			&[data-affil=system] { background-position: 0 -588px; }
+			&[data-affil=manoa] { background-position: 0 -478px; }
+			&[data-affil=hcc] { background-position: 0 -700px; height: 86px }
+			&[data-affil=kcc] { background-position: 0 -854px; height: 86px }
 		}
 		.welcome { font-size: 25px; }
-		h1 { font-size: 56px; font-weight: bold; margin: 10px 0 19px 0; }
+		h1 { font-size: 51px; font-weight: normal; margin: 11px 0 19px 0; } // Course Number
 		img { margin: 10px 0 0 0; }
 	}
 	.no-content {
@@ -45,11 +83,12 @@ h1.site-title a:visited { color: @linkColor; }
 		font-size: 16px;
 		color: @gray;
 		.border-radius(4px); 
+		span.plus { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
 		a {
-			background: none;
-			span.large-icon { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
+			color: @white;
+			margin: 10px 0;
 			&.create-new { margin: 12px 0; color: @grayDark; font-size: 27px; line-height: 1.2; display: block; clear: both; margin: 0 0 20px 0;
-				&:hover { text-decoration: none; color: @grayDarker; }
+				&:hover { text-decoration: none; color: @white; }
 			}
 		}
 	}
@@ -64,32 +103,62 @@ h1.site-title a:visited { color: @linkColor; }
 		text-indent: -9999px;
 		background: url('../images/edit-gear.png') no-repeat;
 	}
+	#content {
+		span.moduleCount { color: @grayLight; font-weight: bold; font-size: 16px; }
+		h1.entry-title { margin: 2px 0 7px }
+		.entry-content {
+			// Content typography
+			h1 { font-size: 30px; line-height: 40px; }
+			h2 { font-size: 24px; line-height: 40px; }
+			h3 { font-size: 18px; line-height: 40px; }
+			blockquote { border-left: 5px solid #CCC; }
+		}
+	}
+	#secondary {
+		h3.sidebar-nav-title {
+			margin: 0;
+			padding: 3px 15px 5px;
+			color: @white;
+			background-color: @grayDark;
+			a { color: @white; }
+		}// h3.sidebar-nav-title
+		ol.lessons {
+			list-style: none;
+			margin: 0;
+			padding: 0; 
+			li.lesson {
+				&.no-content {
+					margin: 10px 0 0 0;
+					a { display: inline; padding: 5px; }
+				}
+				a.lesson-link { display: block;	background-color: @gray; padding: 15px; color: @white;
+					&:hover { background-color: @grayLight; color: @grayDark; }
+				}
+			} // li.lesson
+		} // ul.lessons
+	} // #secondary
+	footer.entry-meta {
+		margin: 0;
+		ol.pager {
+			li {
+				a {background-color: #3A87AD; color: @white;
+					&:hover { background-color: #296887; }
+				}
+			}
+		}
+	}
 }
-
-// @media (max-width: 925px) and (min-width: 768px) {
-// 	#primary { clear: left; }
-// }
-
-// @media (max-width: 1200px) and (min-width: 768px) {
-// 	// #intro-banner { #grid > .core > .span(5); }
-// 	// #primary { #grid > .core > .span(10); }
-// 	body.modules-lessons {
-// 		&.single-layout {
-// 			ol.modules li.module {
-// 				#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-// 				&:nth-child(1) { margin: 0 !important; }
-// 				&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
-// 				&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
-// 			}
-// 		}
-// 	}	
-// }
+footer { margin: 10px 0 0 0; }
 
 @media (max-width: 320px) {
 
 }
 
 @media (max-width: 480px) {
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
+	.module-image { display: none; }
 	body.modules-lessons.single-layout {
 		#intro-banner { display: none; }
 		#inline-intro-banner { width: 100%; height: 100%; }
@@ -107,10 +176,26 @@ h1.site-title a:visited { color: @linkColor; }
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
+	#main {
+		.intro-banner {
+			h1 { font-size: 42px; }
+			.college-branding {
+				&[data-affil=default] { background-position: 0 -587px; }
+				&[data-affil=system] { background-position: 0 -587px; }
+				&[data-affil=manoa] { background-position: 0 -478px; }
+				&[data-affil=hcc] { background-position: 0 -700px; height: 78px }
+				&[data-affil=kcc] { background-position: 0 -700px; height: 78px }
+				background-size: auto;
+			}
+		}
+	}
 	body.modules-lessons.single-layout {
 		#intro-banner { display: none; }
 		#inline-intro-banner { width: 100%; height: 100%; }
-		#primary { width: 100%; margin: 0; }
+		#primary { width: 100%; margin: 0 0 0 10px; }
 		ol.modules li.module {
 
 			//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
@@ -133,9 +218,20 @@ h1.site-title a:visited { color: @linkColor; }
 		#inline-intro-banner { width: 100%; height: 100%; }
 		#primary { width: 100%; margin: 0; }
 	}
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
 	#main {
 		.intro-banner {
 			h1 { font-size: 45px; }
+			.college-branding {
+				&[data-affil=default] { background-position: 0 -587px; }
+				&[data-affil=system] { background-position: 0 -587px; }
+				&[data-affil=manoa] { background-position: 0 -478px; }
+				&[data-affil=hcc] { background-position: 0 -700px; height: 78px }
+				&[data-affil=kcc] { background-position: 0 -700px; height: 78px }
+				background-size: auto;
+			}
 		}
 	}
 	body.modules-lessons {
@@ -155,6 +251,14 @@ h1.site-title a:visited { color: @linkColor; }
 	#main {
 		.intro-banner {
 			h1 { font-size: 48px; }
+			.college-branding {
+				&[data-affil=default] { background-position: 0 -472px; }
+				&[data-affil=system] { background-position: 0 -472px; }
+				&[data-affil=manoa] { background-position: 0 -381px; }
+				&[data-affil=hcc] { background-position: 0 -567px; height: 78px }
+				&[data-affil=kcc] { background-position: 0 -567px; height: 78px }
+				background-size: 210px auto;
+			}
 		}
 	}
 	body.modules-lessons {
@@ -172,7 +276,11 @@ h1.site-title a:visited { color: @linkColor; }
 }
 
 @media (min-width: 1200px) {
-	#content { padding: 0 50px 0 0; }
+	#main {
+		.intro-banner {
+			.college-branding { background-size: auto; }
+		}
+	}
 	body.modules-lessons {
 		&.single-layout {
 			ol.modules li.module {
@@ -198,16 +306,14 @@ body.modules-lessons {
 					a.edit-post-link { display: none; min-height: 0; }
 					& > a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
 						.module-count { padding: 10px 15px; background-color: @grayDarker; }
-						.module-title { font-size: 22px; margin: 10px 15px; line-height: 1.3; display: block; }
-						.module-image { margin: 10px 15px; max-height: 128px; }
+						.module-title { font-weight: normal; font-size: 22px; margin: 10px 15px; line-height: 1.3; display: block; }
+						.module-image { margin: 10px 15px; max-height: 128px; overflow: hidden; }
 						.module-content { margin: 10px 15px; }
 					}
 					
 					&.last { background: none; } // Clear background color for "+ Content" list item
 					.no-content {
-						a { background: none; min-height: 0; margin: 20px 0 22px 0; color: @grayDark;
-							&:hover { color: @grayDarker; }
-						}
+						a { min-height: 0; margin: 20px 0 22px 0; }
 					}
 				}
 			}
@@ -219,10 +325,10 @@ body.modules-lessons {
 		#main {
 			ol.modules {
 				margin: 0;
-				li.module { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; position: relative; padding: 0 0 10px 0;
+				li.module { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; position: relative;
 					.module-count { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; position: absolute; width: 538px; }
-					.module-image { position: absolute; z-index: -1; background-color: @grayLighter; color: @gray; width: 568px; height: 100%; 
-						img { position: absolute; z-index: -1; }
+					.module-image { position: absolute; z-index: -1; background-color: @grayLighter; color: @gray; width: 568px; height: 100%; overflow: hidden; 
+						img { position: absolute; z-index: -1; width: 100%; }
 						.module-image-placeholder {
 							position: absolute;
 							z-index: -1;
@@ -242,12 +348,15 @@ body.modules-lessons {
 						margin: 40px 0 0 0;
 						padding: 12px 15px 10px 15px;
 						hr { border-top: none; border-bottom: none; }
-						.module-title { font-size: 22px; line-height: 1.3; margin: 0 0 10px 0; color: #FFF; }
-						.module-content { margin: 10px 0 0; color: #FFF; }
+						.module-title { font-weight: normal; font-size: 22px; line-height: 1.3; margin: 0 0 10px 0; color: #FFF; }
+						.module-content { margin: 10px 0 0; color: #FFF;
+							a { color: @linkColor; }
+						}
 					}
 					ol.lessons {
 						margin: 0;
 						li.lesson { list-style: none; position: relative;
+							a { color: @white;  }
 							a.edit-post-link { top: 0; right: 0; }
 						}
 					}
@@ -264,7 +373,7 @@ body.units-modules-lessons {
 			li.unit { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; background-color: @grayLighter; padding-bottom: 10px;
 				.unit-title-wrapper { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; overflow: hidden;
 					.unit-count { float: left; margin: 0 10px 0 0; }
-					.unit-title { font-size: 18px; line-height: 20px; margin: 0px; float: left; clear: none; }
+					.unit-title { font-weight: normal; font-size: 18px; line-height: 20px; margin: 0px; float: left; clear: none; }
 				}
 				&.last { background: none; } // Clear background color for "+ Content" list item
 			}
@@ -273,15 +382,18 @@ body.units-modules-lessons {
 			margin: 10px;
 			li.module { list-style: none; margin-bottom: 20px; background-color: @gray; position: relative; min-height: 250px;
 				a.edit-post-link { display: none; min-height: 0; z-index: 3; }
-				a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
+				a { color: @white; min-height: 184px; &:hover { text-decoration: none; }
 					.module-title-wrapper {
 						position: absolute; z-index: 2; width: 240px;
 						padding: 10px 15px; background: url('../images/bg-transparent-80.png') repeat-y;
 						.module-count {  }
-						.module-title { font-size: 22px; line-height: 1.3; display: block; }
+						.module-title { font-weight: normal; font-size: 22px; line-height: 1.3; display: block; }
 					}
 					.module-image {
 						//img { position: absolute; z-index: -1; }
+						overflow: hidden;
+						max-width: none;
+						img { height: 100%; }
 						.module-image-placeholder { position: absolute; background: url('../images/image-icon.png') center 45px no-repeat; height: 100%; padding: 170px 15px 0; text-align: center; }
 					}
 					.module-content { margin: 10px 15px; }
@@ -289,9 +401,7 @@ body.units-modules-lessons {
 				&:nth-child(3n+1) { margin-left: 0; }
 				&.last { background: none; } // Clear background color for "+ Content" list item
 				.no-content {
-					a { background: none; min-height: 0; margin: 20px 0 22px 0; color: @grayDark;
-						&:hover { color: @grayDarker; }
-					}
+					a { min-height: 0; margin: 28px 0 22px 0; }
 				}
 			}
 		}
