--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -1,4 +1,4 @@
-/*!
+	/*!
  * Site Specific Styles 1.0
  * By: JKH
  *
@@ -10,6 +10,9 @@
 
 // If navbar is static on top
 @media (min-width: @navbarCollapseWidth) { body { padding-top: 60px; } }
+
+//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+//#grid > .core > .span(5);
 
 // Design Team Style API
 
@@ -23,8 +26,10 @@
 @DCDCtertiaryColor:"";
 @DCDCbannerColor:""; // Optional
 
+/**
+ * Core Template Styles
+ */
 
-// Course Template Styles
 h1.site-title a:visited { color: @grayLighter; }
 .crumbSpacer { margin: 0 10px; color: @gray; }
 
@@ -60,16 +65,16 @@ header#navbar {
 		background-color: #1B1B1B; color: #FFF;
 		position: relative;
 		.college-branding {
-			min-height: 39px;
+			height: 39px;
+			overflow: hidden;
 			margin-bottom: 20px;
 			padding-bottom: 24px;
 			border-bottom: 1px solid #FFF;
-			background: url('../images/college-logos.png') no-repeat;
-			&[data-affil=default] { background-position: 0 -588px; }
-			&[data-affil=system] { background-position: 0 -588px; }
-			&[data-affil=manoa] { background-position: 0 -478px; }
-			&[data-affil=hcc] { background-position: 0 -700px; height: 86px }
-			&[data-affil=kcc] { background-position: 0 -854px; height: 86px }
+			&[data-affil=default] { img { margin: -588px 0 0 0; } }
+			&[data-affil=system] { img { margin: -588px 0 0 0; } }
+			&[data-affil=manoa] { img { margin: -478px 0 0 0; } }
+			&[data-affil=hcc] { height: 86px; img { margin: -702px 0 0 0; } }
+			&[data-affil=kcc] { height: 86px; img { margin: -702px 0 0 0;} }
 		}
 		.welcome { font-size: 25px; }
 		h1 { font-size: 51px; font-weight: normal; margin: 11px 0 19px 0; } // Course Number
@@ -150,131 +155,11 @@ header#navbar {
 }
 footer { margin: 10px 0 0 0; }
 
-@media (max-width: 320px) {
+/**
+ * Media Queries
+ */
 
-}
-
-@media (max-width: 480px) {
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	.module-image { display: none; }
-	body.modules-lessons.single-layout {
-		#intro-banner { display: none; }
-		#inline-intro-banner { width: 100%; height: 100%; }
-		#primary { width: 100%; margin: 0; }
-		ol.modules li.module {
-
-			//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-			width: 100%;
-			//&:nth-child(3n+1) { margin-left: 0; }
-			//&:nth-child(1) { margin: 0 !important; }
-			//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
-			//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
-		}
-	}
-}
-
-@media (min-width: 480px) and (max-width: 768px) {
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	#main {
-		.intro-banner {
-			h1 { font-size: 42px; }
-			.college-branding {
-				&[data-affil=default] { background-position: 0 -587px; }
-				&[data-affil=system] { background-position: 0 -587px; }
-				&[data-affil=manoa] { background-position: 0 -478px; }
-				&[data-affil=hcc] { background-position: 0 -700px; height: 78px }
-				&[data-affil=kcc] { background-position: 0 -700px; height: 78px }
-				background-size: auto;
-			}
-		}
-	}
-	body.modules-lessons.single-layout {
-		#intro-banner { display: none; }
-		#inline-intro-banner { width: 100%; height: 100%; }
-		#primary { width: 100%; margin: 0 0 0 10px; }
-		ol.modules li.module {
-
-			//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-			//#grid > .core > .span(5);
-			//float: left;
-			width: 47%;
-			float: left;
-			&:nth-child(2n+2){ margin-left: 15px; }
-			//&:nth-child(3n+1) { margin-left: 0; }
-			//&:nth-child(1) { margin: 0 !important; }
-			//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
-			//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
-		}
-	}
-}
-
-@media (max-width: 979px) and (min-width: 768px) {
-	body.modules-lessons.single-layout {
-		#intro-banner { display: none; }
-		#inline-intro-banner { width: 100%; height: 100%; }
-		#primary { width: 100%; margin: 0; }
-	}
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	#main {
-		.intro-banner {
-			h1 { font-size: 45px; }
-			.college-branding {
-				&[data-affil=default] { background-position: 0 -587px; }
-				&[data-affil=system] { background-position: 0 -587px; }
-				&[data-affil=manoa] { background-position: 0 -478px; }
-				&[data-affil=hcc] { background-position: 0 -700px; height: 78px }
-				&[data-affil=kcc] { background-position: 0 -700px; height: 78px }
-				background-size: auto;
-			}
-		}
-	}
-	body.modules-lessons {
-		&.single-layout {
-			ol.modules li.module {
-				//#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-				&:nth-child(3n+1) { margin-left: 0; }
-				//&:nth-child(1) { margin: 0 !important; }
-				//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
-				//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
-			}
-		}
-	}
-}
-
-@media (max-width: 1200px) and (min-width: 979px) {
-	#main {
-		.intro-banner {
-			h1 { font-size: 48px; }
-			.college-branding {
-				&[data-affil=default] { background-position: 0 -472px; }
-				&[data-affil=system] { background-position: 0 -472px; }
-				&[data-affil=manoa] { background-position: 0 -381px; }
-				&[data-affil=hcc] { background-position: 0 -567px; height: 78px }
-				&[data-affil=kcc] { background-position: 0 -567px; height: 78px }
-				background-size: 210px auto;
-			}
-		}
-	}
-	body.modules-lessons {
-		&.single-layout {
-			ol.modules li.module {
-				&:nth-child(1) { display: none; } //#inline-intro-banner
-				//#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-				&:nth-child(3n+2) { margin-left: 0; }
-				//&:nth-child(1) { margin: 0 !important; }
-				//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
-				//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
-			}
-		}
-	}
-}
-
+// And Beyond...
 @media (min-width: 1200px) {
 	#main {
 		.intro-banner {
@@ -289,6 +174,108 @@ footer { margin: 10px 0 0 0; }
 			}
 		}
 	}
+}
+
+// Largest
+@media (max-width: 1200px) and (min-width: 979px) {
+	#main {
+		.intro-banner {
+			h1 { font-size: 48px; }
+			.college-branding {
+				&[data-affil=default] { img { margin: -448px 0 0 0; } }
+				&[data-affil=system] { img { margin: -448px 0 0 0; } }
+				&[data-affil=manoa] { img { margin: -363px 0 0 0; } }
+				&[data-affil=hcc] { height: 86px; img { margin: -539px 0 0 0; } }
+				&[data-affil=kcc] { height: 86px; img { margin: -539px 0 0 0;} }
+			}
+		}
+	}
+	body.modules-lessons {
+		&.single-layout {
+			ol.modules li.module {
+				&:nth-child(1) { display: none; } //#inline-intro-banner
+				&:nth-child(3n+2) { margin-left: 0; }
+			}
+		}
+	}
+}
+
+// Normal
+@media (max-width: 979px) and (min-width: 768px) {
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; margin: 0; }
+	}
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
+	#main {
+		#primary {
+			width: 720px;
+			margin: 0 auto;
+			float: none;
+		}
+		.intro-banner {
+			h1 { font-size: 45px; }
+			.college-branding {
+				&[data-affil=default] { img { margin: -423px 0 0 0; } }
+				&[data-affil=system] { img { margin: -423px 0 0 0; } }
+				&[data-affil=manoa] { img { margin: -344px 0 0 0; } }
+				&[data-affil=hcc] { height: 86px; img { margin: -511px 0 0 0; } }
+				&[data-affil=kcc] { height: 86px; img { margin: -511px 0 0 0;} }
+			}
+		}
+	}
+	body.modules-lessons {
+		&.single-layout {
+			ol.modules li.module {
+				&:nth-child(3n+1) { margin-left: 0; }
+			}
+		}
+	}
+}
+
+// Tablet
+@media (min-width: 480px) and (max-width: 768px) {
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
+	#main {
+		.intro-banner {
+			h1 { font-size: 42px; }
+		}
+	}
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; }
+		ol.modules li.module {
+			width: 47%;
+			float: left;
+			&:nth-child(2n+2){ margin-left: 15px; }
+		}
+	}
+}
+
+// Phones
+@media (max-width: 480px) {
+	#navbar {
+		.navbar-inner { padding: 0; }
+	}
+	.module-image { display: none; }
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; margin: 0; }
+		ol.modules li.module {
+			width: 100%;
+		}
+	}
+}
+
+@media (max-width: 320px) {
+
 }
 
 // Course Template Styles: Modules & Lessons
