Add less styles for alerts

--- a/inc/less/dcdcBootstrap.less
+++ b/inc/less/dcdcBootstrap.less
@@ -13,7 +13,6 @@
 
 // Core variables and mixins
 @import "../bootstrap/less/variables.less";
-@import "override-variables.less";
 @import "../bootstrap/less/mixins.less";
 
 // Grid system and page structure
@@ -34,6 +33,7 @@
 // Components: Buttons & Alerts
 @import "../bootstrap/less/buttons.less";
 @import "../bootstrap/less/button-groups.less";
+@import "../add-ons/less/alerts.less";
 
 // Components: Popovers;
 @import "../bootstrap/less/popovers.less";
@@ -53,3 +53,4 @@
 // Utility classes
 @import "../bootstrap/less/custom-conventions.less";
 @import "../bootstrap/less/utilities.less"; // Has to be last to override when necessary
+@import "override-variables.less";
